[cleanup] use collection.of() functions for initialization where possible (#3338)